# ClearAIM

./: .gitignore  LICENSE  README.md  build_exe_file.py  download_sam.py  main_detection_GUI.py  main_mask_detection.py  pyproject.toml  requirements.txt  setup.bat
docs/: gui_batch_processor.md  gui_mask_detector.md
gui/: gui.py  gui_batch_processor.py  gui_mask_detector.py
setup/: build_exe_batch_processor.py  build_exe_file.py  build_exe_mask_detection.py
src/: mask_detector.py  utility.py
